--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'UA-47449214-1', {
+    page_title: 'Obrigado!!',
+    page_path: '/obrigado',
     'custom_map': {
       'dimension1': 'error_stack',
       'dimension2': 'component_stack'
@@ -22,10 +24,5 @@
 <body>
   <div id="root"></div>
   <script src="index.js"></script>
-  <script>
-    setTimeout(() => {
-      location.href = location.href
-    }, 20000)
-  </script>
 </body>
 </html>
